--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,43 @@
 .logo_code {
-  width: 40%;
   padding: 15px;
+  width: 40%;
 }
 
 .center_image {
-  width: 100%;
-  padding-top: 10px;
   height: auto;
+  padding-top: 10px;
+  width: 100%;
 }
 
 .mid-images {
-  width: 80%;
-  padding: 10px;
+  border-style: double;
   height: auto;
+  padding: 10px;
+  width: 80%;
 }
 
 .mid-images-container,
 .top-row {
-  margin-top: 30px;
   margin: 20px 10px;
+  margin-top: 30px;
 }
 
 .top-line, .middle-line {
-  width: 100%;
+  background-color: #7d97da;
   border: none;
   height: 3px;
-  background-color: #7d97da;
+  width: 100%;
 }
 
 .responsive-image {
-  max-width: 100%;
   height: auto;
+  max-width: 100%;
 }
 
 .social-icons {
-  padding: 1em;
-  margin-right: 0.2em;
   color: #050818;
+  margin-right: 0.2em;
+  padding: 1em;
 }
 
 h1 {
@@ -60,18 +61,18 @@ h3 {
 p {
   color: #0A0B0E;
   font-family: 'Montserrat', sans-serif;
-  text-align: center;
   padding: 5px;
+  text-align: center;
 }
 
 .figure-caption {
-  position: relative;
+  display: block;
   font-family: sans-serif;
   font-size: 8px;
   line-height: 21px;
-  text-align: left;
   margin-top: 0.5em;
-  display: block;
+  position: relative;
+  text-align: left;
 }
 
 @media screen and (min-width: 545px) and (max-width: 700px) {
